Step 10: App Descriptor: manifest.json

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,2 +1,7 @@
+# App Descriptor
+appTitle=SAPUI5 Trainning
+appDescription=The get started walkthrough SAPUI5
+
+# Hello Panel
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
