Step 14: Custom CSS

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,3 +5,6 @@ appDescription=The get started walkthrough SAPUI5
 # Hello Panel
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
+
+homePageTitle= Walkthrough
+helloPanelTitle=Hello World
