--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,3 +8,6 @@ helloMsg=Hello {0}
 
 homePageTitle= Walkthrough
 helloPanelTitle=Hello World
+
+openDialogButtonText=Say Hello with a Dialog
+dialogCloseButtonText=Ok
