--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -13,3 +13,7 @@ openDialogButtonText=Say Hello with a Dialog
 dialogCloseButtonText=Ok
 
 invoiceListTitle=Invoices
+
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
