--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,6 +2,12 @@
 appTitle=SAPUI5 Trainning
 appDescription=The get started walkthrough SAPUI5
 
+#Overview Page
+Overview_rootLabel=Overview Page
+Overview_headerLabel=Header
+Overview_contentLabel=Page Content
+ratingTitle=Rate the Product
+
 # Hello Panel
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
@@ -12,10 +18,26 @@ helloPanelTitle=Hello World
 openDialogButtonText=Say Hello with a Dialog
 dialogCloseButtonText=Ok
 
+#Invoice List
 invoiceListTitle=Invoices
-
 invoiceStatusA=New
 invoiceStatusB=In Progress
 invoiceStatusC=Done
+columnQuantity=Quantity
+columnName=Name
+columnSupplier=Supplier
+columnStatus=Status
+columnPrice=Price
+searchFieldPlaceholder=Search for Product Name
 
+# Detail page
 detailPageTitle=Walkthrough - Details
+ratingConfirmation=You have rated this product with {0} stars
+dateTitle=Order date
+quantityTitle=Quantity
+
+# Product Rating
+productRatingLabelInitial=Please rate this product
+productRatingLabelIndicator=Your rating: {0} out of {1}
+productRatingLabelFinal=Thank you for your rating!
+productRatingButton=Rate
